--- a/manuals/libfsxfs.3
+++ b/manuals/libfsxfs.3
@@ -1,9 +1,9 @@
-.Dd September 20, 2020
+.Dd November  7, 2020
 .Dt libfsxfs 3
 .Os libfsxfs
 .Sh NAME
 .Nm libfsxfs.h
-.Nd Library to support the Extended File System (ext) format
+.Nd Library to support the X File System (XFS) format
 .Sh SYNOPSIS
 .In libfsxfs.h
 .Pp
