--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,13 @@
 TODO:
+* add file entry date time API functions
+* add file entry file mode function
+* add file entry size function
+
+* add support for directory entries
+* add file entry sub entries functions
+
+* change btree_block into btree_node
+
 * add basic format version 5 support
 * add support for 4k sector size (need test data)
 * add support for format version 1 (need test data)
